2009-12-14  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Simon Hausmann.

        Fix the QWebPage inputMethods() autotest after r51758
        to compare the Qt::ImFont property's family against an explicitly
        previously configured family.

        https://bugs.webkit.org/show_bug.cgi?id=32491

        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods):

2009-12-13  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=32499
        Add client based Geolocation provider

        Add first cut of a client based Geolocation provider. This is guarded by
        ENABLE(CLIENT_BASED_GEOLOCATION) and is off by default for now. This adds a
        GeolocationControllerClient interface that no-one currently implements,
        but will in a subsequent patch.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate):

2009-12-13  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Simon Hausmann.

        Add a test in Qt for https://bugs.webkit.org/show_bug.cgi?id=29005
        https://bugs.webkit.org/show_bug.cgi?id=29008

        * tests/qwebframe/tst_qwebframe.cpp:

2009-12-13  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger Freyther.

        [Qt] Re-enable QWebView::renderHints property for Qt for Symbian

        https://bugs.webkit.org/show_bug.cgi?id=28273

        The bug in Qt's moc that triggered a linking error when declaring this
        property has been fixed and we can remove the workaround.

        * Api/qwebview.h:

2009-12-11  Yael Aharon  <yael.aharon@nokia.com>

        Unreviewed build fix for Qt versions < 4.6.

        * tests/qwebframe/tst_qwebframe.cpp:
        * tests/qwebview/tst_qwebview.cpp:
        (tst_QWebView::reusePage):

2009-12-11  Girish Ramakrishnan  <girish@forwardbias.in>

        Reviewed by Tor Arne Vestbø.

        [Qt] Updated QWebElement documentation
        